Respond to QA issue #18 fixed scrolling on mobile and feedback container.

--- a/projects/splash/static/css/style.css
+++ b/projects/splash/static/css/style.css
@@ -321,8 +321,8 @@ button:focus{
     min-width: 726px;
     position: relative;
     display: block;
-    height: 100%;
-    overflow-x: hidden;
+    height: auto;
+    overflow: hidden;
     border-left: solid 1px #CCCCCC;
     border-right: solid 1px #CCCCCC;
     background: #f4f5f5;
@@ -337,7 +337,7 @@ button:focus{
 }
 
 #page-container {
-    position: absolute;
+    position: relative;
     display: block;
     height: 100%;
     top: 100px;
@@ -366,7 +366,7 @@ button:focus{
 
 .page {
     visibility: hidden;
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 0;
     /*overflow: hidden;*/
@@ -713,6 +713,7 @@ button:focus{
     border-top: solid 1px #CCCCCC;
     border-bottom: solid 1px #CCCCCC;
     background-color: #FFFFFF;
+
 }
 
 .feedback-container-expand {
